# click-spinner

./: .gitattributes  .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.md  ci.sh  pyproject.toml  setup.cfg  setup.py  versioneer.py
.github/workflows/: build.yml  publish.yml
click_spinner/: __init__.py  _version.py  py.typed
examples/: hello.py
tests/: __init__.py  test_spinner.py
