[project]
name = "click-spinner"
version = "0.2.0"
description = "Spinner for Click"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Yoav Ram", email = "yoav@yoavram.com" }]
requires-python = ">=3.8,<4"
dependencies = []

[project.urls]
Homepage = 'https://github.com/click-contrib/click-spinner'

[dependency-groups]
dev = [
    "click>=7.1.2",
    "mypy>=1.14.1",
    "pytest>=4.6.11",
    "ruff>=0.0.17",
    "six>=1.17.0",
]

[tool.ruff]
line-length = 120
target-version = "py38"
