[bdist_wheel]
universal=1

[metadata]
description-file = README.md
# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = click_spinner/_version.py
versionfile_build = click_spinner/_version.py
tag_prefix = v
parentdir_prefix = click-spinner-

